tests/snapshots/usage_layout__usage_boundary_120.snap
---
source: tests/usage_layout.rs
expression: render(120)
---
       __________________                       qorrection 0.1.1
      /   +    +    +    \____                  qorrection: PTY wrapper that intercepts Vim-style quit commands
     /     WRITE QUEUE         \                and dispatches FI-FO-FI-FO ambulance gags.
    /    418 I'm an AI agent    \
   /______________________________|             USAGE:
   |   o   o   o   o   o   o   o  |               q9 <cmd> [args...]
   \__(O)__________________(O)____/               qorrection <cmd> [args...]

                                                TRIGGERS (active only when <cmd> is one of:
                                                  copilot, codex, claude, aichat, gemini, qwen, ollama):
                                                  :q   -> standard ambulance, FI-FO-FI-FO siren trail
                                                  :wq  -> larger ambulance carrying "418 I'm an AI agent"
                                                  :q!  -> 9-car parade (really wanted 9! = 362880)

                                                FLAGS:
                                                  -h, --help       show this screen
                                                  -V, --version    print 'qorrection X.Y.Z' and exit

                                                https://github.com/kurone-kito/qorrection
